# EasyQuest

./: .gitignore  Dockerfile  Dockerfile-base  README.md  docker-compose.yaml  env  pyproject.toml
_art_assets/: arc-cards.afdesign  d6.afdesign  npc-arc-cards.afdesign
app/: __init__.py  __main__.py  config.py  first_run.py  globals.py
app/blueprints/auth/routes/: check_your_email.py  forgot_password.py  login.py  ws.py
app/blueprints/register/: __init__.py
app/blueprints/register/routes/: register.py
app/blueprints/register/templates/register/: email__welcome.html
app/blueprints/www/routes/: character.py  characters.py  dev.py  dice.py  genres.py  quest.py  quests.py  user.py  users.py
app/flask_/: __init__.py  config.py  first_run.py
app/flask_/blueprints/account/: __init__.py
app/flask_/blueprints/account/routes/: delete.py  index.py  update_account.py  update_password.py
app/flask_/blueprints/api/: __init__.py
app/flask_/blueprints/api/quest/: __init__.py
app/flask_/blueprints/api/quests/: __init__.py
app/flask_/blueprints/api/routes/: quest.py
app/flask_/blueprints/auth/: __init__.py
app/flask_/blueprints/auth/routes/: check_your_email.py  forgot_password.py  login.py  logout.py  register.py  ws.py
app/flask_/blueprints/quest/character/: __init__.py
app/flask_/blueprints/quest/routes/: add.py  add_arc_card.py  (+16 more)
app/flask_/blueprints/www/: __init__.py
app/flask_/models/: __init__.py  __mixins__.py  arc_card.py  character.py  character_join_request.py  encounter.py  encounter_character.py  encounter_np_character.py  genre.py  np_arc_card.py  np_character.py  quest.py  quest_purgatory.py  system.py  user.py
app/flask_/resources/: cli.py  context_processors.py  favicon.py  image.py  robots.py
app/flask_/resources/json/: np_arc_cards.json
app/flask_/services/: __init__.py  websocket.py
app/flask_/sql/: __init__.py  arc_card_sql.py  character_join_request_sql.py  character_sql.py  np_arc_card_sql.py  quest_purgatory_sql.py  quest_sql.py  user_sql.py
app/models/: __mixins__.py  character.py  genre.py  quest.py  system.py  user.py
app/resources/: cli.py  robots.py
app/resources/templates/extends/: main.html
app/resources/templates/includes/: menu.html
app/utilities/: __init__.py  api_response.py  datetime_delta.py
app/web_/: __init__.py  config.py  globals.py
app/web_/blueprints/api/: __init__.py
app/web_/blueprints/quest/: __init__.py
app/web_/blueprints/quests/: __init__.py
app/web_/blueprints/system/: __init__.py
app/web_/models/: __init__.py  __mixins__.py  arc_card.py  character.py  character_join_request.py  encounter.py  encounter_character.py  encounter_np_character.py  genre.py  np_arc_card.py  np_character.py  quest.py  quest_purgatory.py  system.py  user.py
app/web_/resources/: cli.py
app/web_/resources/json/: arc_cards.json
app/web_/services/: __init__.py  zepto.py
app/web_/sql/: __init__.py  arc_card_sql.py  character_join_request_sql.py  character_sql.py  np_arc_card_sql.py  quest_purgatory_sql.py  quest_sql.py  user_sql.py
app/websockets_/: __init__.py  __main__.py  authenticate.py  broadcast.py  close_wsid_connection.py  handler.py  run.py
app/websockets_/actions/: __init__.py  authenticate.py  broadcast.py  disconnect_user_id.py  get_data.py  send_to_user.py  send_to_user_id.py
app/websockets_/utilities/: __init__.py
app/ws/: __main__.py
configs/: gunicorn.conf.py  supervisord.conf  tailwind.config.js
production_configs/: gunicorn.conf.py  nginx.config  supervisord.conf
requirements/: development.txt  main.txt  production.txt
tailwindcss/: _.css  buttons.css  form.css  game_elements.css  pills.css  structure.css  tabs.css  themes.css  themes_buttons.css  themes_forms.css  themes_pills.css  themes_structure.css  themes_tabs.css  typography.css
(+150 files in other folders)
